# libmigraine

./: .gitignore  README.md
build_systems/cmake/: CMakeLists.txt  LEEME.md  README.md  migraine.cp.in
build_systems/make/: Makefile  README.md
build_systems/meson/: LEEME.md  README.md  meson.build
build_systems/meson/include_meson/: meson.build
build_systems/meson/src_meson/: meson.build
build_systems/script/: LEEME.md  README.md  clean_buildir.sh  make_library.sh  migraine.pc.in  remove_library.sh
include/: migraine.h
src/: migraine.c
